tln/static/tln/main.css
/* ... */
_:-ms-input-placeholder, :root #top-nav-h #homepage-link { display: block; } /* IE 10 */
#top-nav-h #homepage-link img {
    position: absolute;
    left: 0;
    top: 0;
    transition: opacity 0.5s ease-in-out;
    max-height: 100%; }
_:-ms-input-placeholder, :root #top-nav-h #homepage-link img { max-height: none; } /* IE 10 */
#top-nav-h #homepage-link img.img-bottom { opacity: 0; }
#top-nav-h #homepage-link img.img-top:hover { opacity: 0; }
#top-nav-h #homepage-link img.img-bottom:hover { opacity: 1; }

@media (min-width: 1080px) {
#top-nav-h #homepage-link { left: -92px; height: 60px; }
_:-ms-input-placeholder, :root #top-nav-h #homepage-link img { /* IE 10 */
    width: 63px; height: 60px; }
#top-nav-h .nav-separator-homepage {
    position: relative;
    border-right: solid 1px #a57100;
    left: -21px;
    height: 56px; }
_:-ms-input-placeholder, :root #top-nav-h .nav-separator-homepage { display: block; } /* IE 10 */
#top-nav-h .nav-separator {
    border-right: solid 1px #a57100;
    height: 30px;
    margin-top: -2px; }
#top-nav-h li > a { padding: 0 60px; } }

@media (max-width: 1080px) {
#top-nav-h { padding-right: 3px; -ms-flex-direction: column; flex-direction: column; }
#top-nav-h #homepage-link { top: -6px; left: 6px; height: 83px; }
_:-ms-input-placeholder, :root #top-nav-h #homepage-link img { width: 87px; } /* IE 10 */
#top-nav-h #homepage-link img { transform: translateX(-50%); }
#top-nav-h .nav-separator-homepage { display: none; }
#top-nav-h #top-nav1,
#top-nav-h #top-nav2 { width: 100%; }
#top-nav-h li { width: 100%; max-width: 230px; }
#top-nav-h li:first-child { float: right; margin-right: 1px; }
#top-nav-h li:last-child { float: left; }
#top-nav-h li:first-child > a { float: right; padding-right: 22%; }
#top-nav-h li:last-child > a { float: left; padding-left: 22%; } }

#top-nav-h li > a { font-size: 56px; transition: color 0.4s ease, opacity 0.4s ease; }
#top-nav-h span { transition: all 0.4s ease; }


/* Sidebar (blog & photos only)
   ========================================================================== */

#sidebar {
    margin-bottom: 36px;
    border: 1px solid #deda99;
    padding-top: 0px;
    padding-bottom: 0px;
    padding-left: 4px;
    padding-right: 8px;
    width: 305px;
    background-color: #fbf2bd;
    font-size: 18px;
    line-height: 26px; }
#sidebar::-webkit-scrollbar { width: 0px; }
#sidebar-cruncher { overflow-y: hidden; }

#sidebar #widget-welcome { line-height: 27px; }

body #sidebar-column {
    position: absolute;
    transform: translateX(649px); }
body #sidebar {
    position: -webkit-sticky;
    position: sticky;
    top: 42px;
    will-change: transform;
    overflow-y: scroll;
    scrollbar-width: none; }
@media (max-width: 1512px) {
body #sidebar-column {
    position: relative;
    right: auto !important;
    transform: none; }
body #sidebar {
    max-height: none; } }

.shadow-top { box-shadow: inset 0 20px 12px -12px #deda99; }
.shadow-bottom { box-shadow: inset 0 -22px 12px -12px #deda99; }
.shadow-top.shadow-bottom { box-shadow: inset 0 20px 12px -12px #deda99,
                                        inset 0 -22px 12px -12px #deda99; }

/* Bullet size is not consistent across browsers...
 * https://bugs.chromium.org/p/chromium/issues/detail?id=585381 */
.bullet-li { padding-left: 2px; }
.bullet-li:before {
    margin: -0.5px;
    font-family: Arial;
    font-size: 27px;
    content: "•";
    line-height: 18px;
    vertical-align: middle;
    position: relative;
    top: -1px;
    left: -1px; }


/* Skip-to-main Link
   ========================================================================== */

#skip-link {
    position: fixed;
    margin: 6px;
    padding: 10px 17px 11px 17px;
    border: 1px solid #d3d4db;
    background-color: #fbf2bd;
    box-shadow: 0 0 8px 0 rgba(0, 13, 181, 0.6);
    color: rgb(0, 13, 181);
    text-decoration: underline;
    font-family: Alegreya, Palatino, serif;
    transition: box-shadow 0.4s ease; }
#skip-link:hover { box-shadow: 0 0 14px 0 rgba(0, 13, 181, 0.8); }
#skip-link:focus, #skip-link:active {
    top: 0;
    left: 0;
    width: auto;
    height: auto;
    z-index: 1000 }


/* Todo Now Link
   ========================================================================== */

#todo-logo-nav {
    position: absolute;
    z-index: 100;
    top: -156px;
    right: -126px;
    margin-top: -10px;
    height: 220px;
    width: 294px !important;
    transform: rotate(32deg); }
#todo-logo-nav:not(.todo-logo-nav-mobile) {
    transition: transform ease .9s; }
#todo-logo-nav.todo-logo-nav-mobile {
    opacity: 0;
    transition: opacity ease-in .3s;
    top: -130px;
    right: 20px;
    height: 120px;
    width: 160px !important; }
#todo-logo-nav > img {
    position: absolute;
    width: 100%; }

#todo-logo-nav:not(.todo-logo-nav-mobile):hover,
#top-nav-h #todo-logo-nav:not(.todo-logo-nav-mobile):hover {
    transform: rotate(22deg) translate(-9%, 68%); }

#todo-logo-nav .todo-logo-glow { opacity: 0; transition: opacity ease-in .9s; }
#todo-logo-nav:not(.todo-logo-nav-mobile):hover .todo-logo-glow,
#todo-logo-nav.todo-logo-nav-mobile.mobile-hover .todo-logo-glow {
    opacity: .8; transition-timing-function: ease-out; }

#top-nav-h #todo-logo-nav {
    opacity: 0;
    z-index: 102;
    top: -234px;
    right: 0;
    transition: opacity ease-out .2s, transform ease .9s;
    transform: rotate(32deg); }
#top-nav-h.expanded #todo-logo-nav {
    opacity: 1;
    transition: opacity ease-in .3s .1s, transform ease .9s }
/* ... */

